wwr/styles/rafting.css
:root {
    --primary-color : #376DAB ;
    --secondary-color : #ECF3F8 ;
    --accent1-color : #9F7D57 ;
    --accent2-color : #123C54 ;
}

body{
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
}

h1{
    text-align: center ;
    color : var(--primary-color);
	font-size: 2.5rem;
    font-family: "Oswald", sans-serif;
    font-weight: Bold;
	text-shadow: 3px 3px 5px var(--accent1-color);
}

h2{
    text-align: center;
	font-size: 2rem;
    font-family: "Oswald", sans-serif ;
    color: var(--primary-color);
	text-shadow: 3px 3px 5px var(--accent1-color); 
}

p{
    font-size: 1rem;
    font-family: "Roboto Condensed", sans-serif;
    color: var(--accent2-color);
    padding: 0; 
}

.hero-article-text {
    color: var(--secondary-color);
    margin: 0;
    order: -1;
}

.hero img{
    display : block;
    width : 100%;
    height : auto;
}

.hero{
    position: relative;
    display: flex;
    align-items: center;
    gap: 20px;
    padding: 20px;
} 

.hero h1{
    position: absolute;
    top:20px;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    align-self: center;
    color: var(--secondary-color);
}

.hero article{
    position: absolute;
    opacity: 0.9;
    bottom: 200px;
    background-color: var(--accent2-color);
    left: 500px;
    padding: 15px;
    max-width: 600px;
    display: flex;
    align-items: center;
    gap: 10px;
    justify-content: flex-end;
}

.sociallinks a{
    text-decoration: none;
}

.sociallinks a:hover{
    color: var(--accent2-color);
    font-weight: 700;
}

.hero article img{
    float: right;
    margin-left: 15px;
    margin-bottom: 15px;
}

header{
    display : grid;
    grid-template-columns: 1fr 1fr 5fr;
    align-items: center;
}

header nav{
    display: flex;
    justify-content: center;
    gap: 40px;
}

header img{
    grid-column: 2/3;
}

footer nav{
    display: flex;
    justify-content: flex-end; 
}

#Adventure{
    margin: 40px 0;
}

#Adventure img{
    grid-row: 2/3;
    width: 100%;
    height: auto;
    max-width: 200px;
    margin: 0 auto;
}

.adventure-grid img, .employee-grid img {
    width: 100%; 
    height: auto; 
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
}

.adventure-grid figcaption, .employee-grid figcaption {
    margin-top: 10px; 
    font-family: "Roboto Condensed", sans-serif;
    font-size: 1rem;
    color: var(--accent2-color);
}

#Adventure h2{
    display: grid;
    align-self: center;
    grid-row: 1/2;
    grid-column: 1/6;
}

.adventure-grid figure {
    margin: 0; 
    text-align: center; 
}

#History{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr 3fr;
    gap: 20px;
    align-items: center;
}

#History h2{
    display: grid;
    grid-column: 1/4;
    grid-row: 1/2;
    align-self: center;
}

#History img{
    display: grid;
    grid-row: 2/3;
    grid-column: 2/3;
}

#History p{
    display: grid;
    text-align: center;
    align-self: center;
}

form{
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
    padding: 1rem;
    border: 1px solid var(--accent2-color);
    border-radius: 0.5rem;
    background-color: var(--accent1-color);
    display: grid;
}

label, input, button, textarea{
    font-family: "Roboto Condensed", sans-serif;
}

input[type="checkbox"]{
    width: 22px;
    height: 22px;
    vertical-align: bottom;
}

button{
    margin: 2rem;
    background-color: var(--primary-color);
    color:black;
    border: none;
    border-radius: 0.5rem;
    padding:0.5rem 1rem;
}

button:hover{
    background-color: #123C54;
}

.form-item{
    display: grid;
    align-items: center;
    grid-template-columns: 1fr 2fr;
    margin: 0.5rem 0;
}

fieldset{
    display: grid;
    grid-gap: 0.5rem;
    margin: 1rem;
    padding: 0.5rem;
    border: 1px solid var(--accent2-color);
}

.column1{
    grid-template-columns: 3fr 1fr;
    margin: 0.5rem 0;
}

.item{
    width: 250px;
    margin: 0 auto;
    border: 1px solid var(--accent2-color);
    border-radius: 0.5rem;
    background-color: var(--accent1-color);
}

.grid-layout {
    display: grid;
    grid-template-columns: repeat(5, 1fr); 
    gap: 20px; 
    align-items: center; 
    justify-content: center; 
}

.employee-grid figure {
    margin: 0; 
    text-align: center; 
}

.map{
    width: 100%;
}

.map iframe {
    width: 100%;
    height: 300px;
    max-width: 600px; 
}

